Vibed Rust API Server for Redeemable Subscriptions

--- a/fly.indexer.toml
+++ b/fly.indexer.toml
@@ -3,7 +3,7 @@ app = 'subindexer'
 primary_region = 'fra'
 
 [build]
-dockerfile = "Dockerfile"
+dockerfile = "Dockerfile.indexer"
 
 [env]
 # DATABASE_URL is expected to be set via `fly secrets set DATABASE_URL=...`
