--- a/fly.indexer.toml
+++ b/fly.indexer.toml
@@ -9,6 +9,6 @@ dockerfile = "Dockerfile.indexer"
 # DATABASE_URL is expected to be set via `fly secrets set DATABASE_URL=...`
 
 [[vm]]
-  memory = '1gb'
+  memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
