--- a/fly.indexer.toml
+++ b/fly.indexer.toml
@@ -3,12 +3,12 @@ app = 'subindexer'
 primary_region = 'fra'
 
 [build]
-dockerfile = "Dockerfile"
+dockerfile = "Dockerfile.indexer"
 
 [env]
 # DATABASE_URL is expected to be set via `fly secrets set DATABASE_URL=...`
 
 [[vm]]
-  memory = '1gb'
+  memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
