Update indexer yaml

--- a/rindexer.yaml
+++ b/rindexer.yaml
@@ -13,10 +13,10 @@ contracts:
 - name: SubscriptionModule
   details:
   - network: gnosis
-    address: 0x7E9BaF7CC7cD83bACeFB9B2D5c5124C0F9c30834
+    address: TODO: Get new Address!
     start_block: '40352121'
   abi: ./abis/SubscriptionModule.abi.json
   include_events:
   - SubscriptionCreated
-  - SubscriptionCancelled
+  - Unsubscribed
   - Redeemed
