--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,13 +1,28 @@
-FROM rust:1.87.0-slim-bullseye AS builder
+FROM rust:1.88.0-alpine AS builder
+
+RUN apk add --no-cache \
+    musl-dev \
+    build-base \
+    openssl-dev \
+    pkgconfig \
+    cmake \
+    perl \
+    bash \
+    curl \
+    linux-headers
 
 WORKDIR /usr/src/app
 COPY . .
 
 RUN cargo build --release
 
-FROM debian:bullseye-slim
+FROM alpine:3.20
 
-RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
+RUN apk add --no-cache \
+    libgcc \
+    musl \
+    openssl \
+    ca-certificates
 
 COPY --from=builder /usr/src/app/target/release/subindexer /usr/local/bin/subindexer
 
