--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,9 @@
+# Database
 DATABASE_URL=postgresql://postgres:rindexer@localhost:5440/postgres
 POSTGRES_PASSWORD=rindexer
+API_PORT=3000
+
+# Indexer & API
+GNOSIS_RPC_URL=https://rpc.gnosischain.com/
+SUBSCRIPTION_MODULE=0x48BC28f8757cF5dc38eE7219DFf1c1F2b768737D
+START_BLOCK=40938210
