--- a/rindexer.yaml.template
+++ b/rindexer.yaml.template
@@ -3,7 +3,7 @@ project_type: no-code
 networks:
 - name: gnosis
   chain_id: 100
-  rpc: https://rpc.gnosischain.com/
+  rpc: $GNOSIS_RPC_URL
 storage:
   postgres:
     enabled: true
@@ -13,8 +13,8 @@ contracts:
 - name: SubscriptionModule
   details:
   - network: gnosis
-    address: 0x48BC28f8757cF5dc38eE7219DFf1c1F2b768737D
-    start_block: 40938210
+    address: $SUBSCRIPTION_MODULE
+    start_block: $START_BLOCK
   abi: ./abis/SubscriptionModule.abi.json
   include_events:
   - SubscriptionCreated
