Migrate Redeemer as Server Cron

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,6 @@ API_PORT=3000
 GNOSIS_RPC_URL=https://rpc.gnosischain.com/
 SUBSCRIPTION_MODULE=0xcEbE4B6d50Ce877A9689ce4516Fe96911e099A78
 START_BLOCK=41149803
+
+# Redeemer
+PK=
