Publish API Image (#12)
Instead of waiting for the build to bake into an image every time we
wanna change on the deployment. Lets publish and image and use it in the
compose file.

Getting closer to DappNode Package...

1. Publish API Server Image
2. Move Redeemer into Server as Cron task

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dotenv = "0.15"
 chrono = "0.4"
-hex = "0.4.3"
+circles-pathfinder = "0.4.0"
+alloy = {version = "1.0.22", features = ["std", "providers", "signers"] }
