--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -30,7 +30,7 @@ services:
     working_dir: /app/project_path
     command: [ "start", "indexer"]
     environment:
-      DATABASE_URL: ${DATABASE_URL:-postgres://postgres:rindexer@postgresql:5432/postgres}
+      DATABASE_URL: postgres://postgres:rindexer@postgresql:5432/postgres
 
   api:
     image: ghcr.io/deluxtreme/subindexer:main
@@ -38,7 +38,7 @@ services:
       postgresql:
         condition: service_healthy
     environment:
-      DATABASE_URL: ${DATABASE_URL:-postgres://postgres:rindexer@postgresql:5432/postgres}
+      DATABASE_URL: postgres://postgres:rindexer@postgresql:5432/postgres
       REDEEMER_PK: ${REDEEMER_PK}
       API_PORT: ${API_PORT:-3000}
       REDEEM_INTERVAL: ${REDEEM_INTERVAL:-3600}
