--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -4,11 +4,11 @@ volumes:
 
 services:
   postgresql:
-    image: postgres:latest
+    image: postgres:18
     shm_size: 1g
     restart: always
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql
     ports:
       - 5440:5432
     env_file:
