--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       retries: 5
       start_period: 10s
   indexer:
-    image: ghcr.io/joshstevens19/rindexer
+    image: ghcr.io/joshstevens19/rindexer:v0.28.0
     depends_on:
       postgresql:
         condition: service_healthy
